chore(templates): update modules to latest commits

--- a/.github/workflows/import-publications.yml
+++ b/.github/workflows/import-publications.yml
@@ -28,7 +28,7 @@ jobs:
 
     env:
       ACADEMIC_VERSION: '>=0.10.0'
-      PYTHON_VERSION: '3.12'
+      PYTHON_VERSION: '3.13'
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
@@ -39,7 +39,7 @@ jobs:
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.13'
       - name: Setup pip cache
         uses: actions/cache@v4
         with:
@@ -100,7 +100,7 @@ jobs:
             📖 [View Documentation](https://github.com/GetRD/academic-file-converter)
           base: main
           labels: automated-pr, content, publications
-          branch: hugoblox-import-publications
+          branch: hugoblox-import-publications-${{ github.run_id }}
           delete-branch: true
           draft: false
       - name: Check outputs
