--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -289,3 +289,11 @@ hugoblox:
     # Affiliate referral code for rewards program
     # Join affiliate program: https://hugoblox.com/affiliates
     affiliate_code: ""
+
+# ────────────────────────────────────────────────────────────────────────────
+# FEATURES
+# Site feature toggles
+# ────────────────────────────────────────────────────────────────────────────
+features:
+  # Disable Shiki (WASM) highlighting to reduce CI memory usage.
+  shiki_highlighting: false
