--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,7 @@ env:
 on:
   # Standalone trigger for PR validation
   pull_request:
-        # Reduce parallelism to avoid warpc memory crashes on GitHub Actions runners.
-        HUGO_NUMWORKERMULTIPLIER: '0.5'
-        GOMAXPROCS: '2'
-        GOMEMLIMIT: '2GiB'
+    branches: ['main']
   # Reusable workflow trigger - called by deploy.yml
   workflow_call:
     outputs:
@@ -120,7 +117,9 @@ jobs:
         HUGO_ENVIRONMENT: production
         HUGO_BLOX_LICENSE: ${{ secrets.HUGO_BLOX_LICENSE }}
         # Reduce parallelism to avoid warpc memory crashes on GitHub Actions runners.
-        HUGO_NUMWORKERMULTIPLIER: '0.5'
+        HUGO_NUMWORKERMULTIPLIER: '0.125'
+        GOMAXPROCS: '1'
+        GOMEMLIMIT: '1GiB'
       run: |
         echo "Hugo Cache Dir: $(hugo config | grep cachedir)"
         hugo --minify
